Subcategories pages added, and wrap centralisation solved

--- a/app/assets/stylesheets/zero_failures.css.sass
+++ b/app/assets/stylesheets/zero_failures.css.sass
@@ -9,3 +9,75 @@
   *= require warning_page
   *= require custom_flash
   *= require environment_notice
+
+.page-header
+  text-align: center
+
+#title
+  text-align: center
+  font-weight: bold
+  font-size: 20px
+
+#subtitle
+  text-align: center
+  font-style: italic
+
+#categories_box
+  border: 2px solid grey
+  position: fixed
+  margin: 65px 0px 0px 40px
+  width: 300px
+
+#categories_box p, #categories_box ul.nav li
+  text-align: center
+
+#categories_box ul.nav li.active
+  background: grey
+
+#categories_box p
+  background-color: blue
+  color: white
+
+#go_back
+  float: right
+
+.page-header
+  text-align: center
+
+.project_box
+  margin-top: 10px
+  border: 2px solid grey
+  font-weight: bold
+
+.knowledge
+  border: 2px solid grey
+  background-color: red
+  height: 30px
+  text-align: center
+  font-weight: bold
+  font-style: italic
+  font-size: 20px
+  color: white
+  margin-bottom: 5px
+
+.economic
+  border: 2px solid grey
+  background-color: green
+  height: 30px
+  text-align: center
+  font-weight: bold
+  font-style: italic
+  font-size: 20px
+  color: white
+  margin-bottom: 5px
+
+.technology
+  border: 2px solid grey
+  background-color: blue
+  height: 30px
+  text-align: center
+  font-weight: bold
+  font-style: italic
+  font-size: 20px
+  color: white
+  margin-bottom: 5px
